apps/shop/redis/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-redis-prod
spec:
  host: shop-redis.shop-redis.svc.cluster.local
  subsets:
  - name: shop-redis-prod
    labels:
      app: shop-redis
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-redis-prod-p1a
    labels:
      app: shop-redis
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
